<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="vertical" >
		    
		<EditText
	   		android:id="@+id/edit_name"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="8dp"
	    	android:hint="@string/edit_name" />
		
		<EditText
	   		android:id="@+id/edit_desc"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="8dp"
	    	android:hint="@string/edit_desc" />
		
		<Button
	    	android:id="@+id/button_addphoto"
	        android:layout_width="match_parent"
	        android:layout_height="160dp"
	        android:layout_marginTop="8dp"
	        android:text="@string/button_addphoto" />
		
		<LinearLayout
		    android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="4dp"
			android:orientation="horizontal" >
			<TextView
		        android:id="@+id/text_location"
		        android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/text_location"
		        android:textColor="#141414"
		        android:typeface="sans"
		        android:textSize="20sp" />
			<Button
		    	android:id="@+id/button_loc_auto"
		    	android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/button_loc_auto" />
			
			<Button
		    	android:id="@+id/button_loc_manual"
		    	android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/button_loc_manual" />
		</LinearLayout>
		
		<LinearLayout
		    android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
			<ImageView
		        android:id="@+id/project_location_image"
		        android:layout_width="48dp"
		        android:layout_height="48dp"
		        android:src="@drawable/ic_action_place" />

			<TextView
			    android:id="@+id/text_location_auto"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="12dp"
			    android:text="Uxbridge, UK"
			    android:textColor="#141414"
			    android:textSize="16sp"
			    android:textStyle="bold"
			    android:typeface="sans" />

		</LinearLayout>
		
		<LinearLayout
		    android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
			<TextView
			    android:id="@+id/text_startdate"
			    android:layout_weight="3"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:text="Start date: -"
			    android:textColor="#141414"
			    android:textSize="18sp"
			    android:typeface="sans" />
			<Button
		    	android:id="@+id/button_startdate"
		    	android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="Edit" />
		</LinearLayout>
		
		<LinearLayout
		    android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
			<TextView
			    android:id="@+id/text_enddate"
			    android:layout_weight="3"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:text="End date: -"
			    android:textColor="#141414"
			    android:textSize="18sp"
			    android:typeface="sans" />
			<Button
		    	android:id="@+id/button_enddate"
		    	android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="Edit" />
		</LinearLayout>
		
		<LinearLayout
		    android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
			<Button
		    	android:id="@+id/button_clear"
		    	android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/button_clear" />
			
			<Button
		    	android:id="@+id/button_post"
		    	android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/button_post" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>
    
    <!--EditText
	   		android:id="@+id/edit_location"
	   		android:layout_weight="3"
	    	android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="8dp"
	    	android:hint="@string/edit_location" />
		
		<Button
	    	android:id="@+id/button_getlocation"
	    	android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/button_getlocation" /-->