<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context=".LoginActivity"
    android:background="#eeeeee" >

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/logobig" />
    	
   	<EditText
   		android:id="@+id/edit_password"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginBottom="8dp"
    	android:layout_centerVertical="true"
    	android:inputType="textPassword"
    	android:hint="@string/edit_password" />
    
    <EditText
    	android:id="@+id/edit_email"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_above="@id/edit_password"
  		android:layout_marginBottom="8dp"
    	android:hint="@string/edit_email"
    	android:inputType="textEmailAddress"
    	android:focusable="true"
    	android:focusableInTouchMode="true" />
    
    <Button
    	android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password"
        android:text="@string/button_login"
        android:onClick="login" />
    
    <TextView
    	android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/text_register"
        android:clickable="true"
        android:onClick="register" />

</RelativeLayout>
